tests/baselines/reference/emptyTuplesTypeAssertion02.errors.txt
emptyTuplesTypeAssertion02.ts(2,11): error TS2493: Tuple type '[]' of length '0' has no element at index '0'.


==== emptyTuplesTypeAssertion02.ts (1 errors) ====
    let x = [] as [];
    let y = x[0];
              ~
!!! error TS2493: Tuple type '[]' of length '0' has no element at index '0'.